crates/keron-lang/tests/corpus/errors/check/secret_coalesce_rejected.keron
# `secret(...)` returns `Secret` (not `Secret?`) by design — silent
# fallback for credentials is dangerous, and `Secret`'s audit
# breadcrumb role would be diluted if non-secret values could be
# `??`'d into a `Secret` slot. See the doc comment on
# `IntrinsicId::Secret`. This fixture pins the diagnostic.
val s: Secret = secret("op://Vault/Item/field") ?? secret("op://Vault/Backup/field")
